Use white-space:pre-wrap on pre tags to prevent overflowing container (#3796)

--- a/assets/css/src/amp-validation-single-error-url.css
+++ b/assets/css/src/amp-validation-single-error-url.css
@@ -63,6 +63,10 @@ table.striped > tbody > tr.even {
 	font-weight: 600;
 }
 
+.detailed pre {
+	white-space: pre-wrap;
+}
+
 .column-status select {
 	vertical-align: top;
 }
